20070520
 - (dtucker) OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2007/04/14 22:01:58
     [auth2.c]
     remove unused macro; from Dmitry V. Levin <ldv@altlinux.org>

20070509
 - (tim) [configure.ac] Bug #1287: Add missing test for ucred.h.

20070429
 - (dtucker) [openbsd-compat/bsd-misc.c] Include unistd.h and sys/types.h
   for select(2) prototype.
 - (dtucker) [auth-shadow.c loginrec.c] Include time.h for time(2) prototype.
 - (dtucker) [configure.ac openbsd-compat/getrrsetbyname.c] Bug #1299: Use the
   platform's _res if it has one.  Should fix problem of DNSSEC record lookups
   on NetBSD as reported by Curt Sampson.
 - (dtucker) [openbsd-compat/xmmap.c] Include stdlib.h for mkstemp prototype.
 - (dtucker) [configure.ac defines.h] Have configure check for MAXSYMLINKS
   so we don't get redefinition warnings.
 - (dtucker) [openbsd-compat/xmmap.c] Include stdlib.h for mkstemp prototype.
 - (dtucker) [configure.ac defines.h] Prevent warnings about __attribute__
   __nonnull__ for versions of GCC that don't support it.
 - (dtucker) [configure.ac defines.h] Have configure check for offsetof
   to prevent redefinition warnings.

20070406
 - (dtucker) [INSTALL] Update the systems that have PAM as standard.  Link
   to OpenPAM too.
 - (dtucker) [INSTALL] prngd lives at sourceforge these days.

20070326
 - (tim) [auth.c configure.ac defines.h session.c openbsd-compat/port-uw.c
   openbsd-compat/port-uw.h openbsd-compat/xcrypt.c] Rework libiaf test/defines
   to account for IRIX having libiaf but not set_id(). Patch with & ok dtucker@

20070325
 - (dtucker) [Makefile.in configure.ac] Replace single-purpose LIBSELINUX,
   LIBWRAP and LIBPAM variables in Makefile with the general-purpose
   SSHDLIBS.  "I like" djm@

20070321
 - (dtucker) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2007/03/09 05:20:06
     [servconf.c sshd.c]
     Move C/R -> kbdint special case to after the defaults have been
     loaded, which makes ChallengeResponse default to yes again.  This