@@ -3,6 +3,12 @@
    - stevesk@cvs.openbsd.org 2007/04/14 22:01:58
      [auth2.c]
      remove unused macro; from Dmitry V. Levin <ldv@altlinux.org>
+   - stevesk@cvs.openbsd.org 2007/04/18 01:12:43
+     [sftp-server.c]
+     cast "%llu" format spec to (unsigned long long); do not assume a
+     u_int64_t arg is the same as 'unsigned long long'.
+     from Dmitry V. Levin <ldv@altlinux.org>
+     ok markus@ 'Yes, that looks correct' millert@
 
 20070509
  - (tim) [configure.ac] Bug #1287: Add missing test for ucred.h.
@@ -2903,4 +2909,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4661 2007/05/20 04:58:41 dtucker Exp $
+$Id: ChangeLog,v 1.4662 2007/05/20 04:59:32 dtucker Exp $
